Ändrat typsnitt för button

--- a/AndroidTest/res/layout/activity_main.xml
+++ b/AndroidTest/res/layout/activity_main.xml
@@ -19,5 +19,6 @@
     android:id="@+id/add_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Add new entry"/>
+    android:text="Add new entry"
+    android:typeface="monospace"/>
 </LinearLayout>
