--- a/AndroidTest/res/layout/activity_main.xml
+++ b/AndroidTest/res/layout/activity_main.xml
@@ -20,5 +20,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Add new entry"
-    android:typeface="monospace"/>
+    android:textColor="#FFFFFFFF"/>
 </LinearLayout>
