--- a/GameOfNature/res/layout/activity_start.xml
+++ b/GameOfNature/res/layout/activity_start.xml
@@ -8,4 +8,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StartActivity" >
 
+    <Button
+        android:id="@+id/StartButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:text="@string/start_button" 
+        />
+
 </RelativeLayout>
