--- a/GameOfNature/res/layout/activity_alternativsida.xml
+++ b/GameOfNature/res/layout/activity_alternativsida.xml
@@ -1,51 +1,182 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Alternativsida" >
+		<!-- Lagnamn -->
+        <TextView
+            android:id="@+id/LagnamnView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/lagnamn"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView
-        android:id="@+id/LagnamnView"
-        android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/LagnamnText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/lagnamn" />
+	<!-- Lagfärg -->
+    <LinearLayout
+        android:layout_width="234dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="24dp"
-        android:text="Lagnamn:"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center"
+        android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/LagnamnText"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/LagfärgView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/lagfärg"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <!-- Top Row -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FFFF0000"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FFFF0000" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FF660000"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FF660000" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FFFF6600"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FFFF6600" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FFFFCC00"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FFFFCC00" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FF009900"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FF009900" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FF009999"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FF009999" />
+        </LinearLayout>
+        <!-- Bottom Row -->
+         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FF0000FF"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FF0000FF" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FF990099"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FF990099" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FFFF6666"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FFFF6666" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FFFFFFFF"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FFFFFFFF" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FF787878"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FF787878" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="2dp"
+                android:background="#FF000000"
+                android:contentDescription="@string/colorbackgroundproperties"
+                android:src="@drawable/colorbackgroundproperties"
+                android:tag="#FF000000" />
+             </LinearLayout>
+    </LinearLayout>
+    <!-- Spelkaraktär -->
+    <LinearLayout
+        android:layout_width="234dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/LagnamnView"
-        android:layout_below="@+id/LagnamnView"
-        android:layout_marginTop="16dp"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/LagfärgView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/LagnamnText"
-        android:layout_below="@+id/LagnamnText"
-        android:layout_marginTop="24dp"
-        android:text="Lagfärg:"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
+        android:orientation="vertical" >
     <TextView
         android:id="@+id/SpelkaraktärView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/LagfärgView"
-        android:layout_below="@+id/LagfärgView"
-        android:layout_marginTop="88dp"
-        android:text="Spelkaraktär:"
+        android:layout_marginTop="24dp"
+        android:text="@string/spelkaraktär"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
-</RelativeLayout>
+   </LinearLayout>
+	<!-- Button för Bekräftning -->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_gravity="right"
+        android:text="@string/bekräfta" />
+</LinearLayout>
