--- a/GameOfNature/res/layout/activity_start.xml
+++ b/GameOfNature/res/layout/activity_start.xml
@@ -16,6 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
         android:text="@string/start_button" 
+        android:onClick="nextScreen"
         />
 
 </RelativeLayout>
