--- a/GameOfNature/res/layout/activity_alternativsida.xml
+++ b/GameOfNature/res/layout/activity_alternativsida.xml
@@ -187,9 +187,11 @@
    </LinearLayout>
 	<!-- Button för Bekräftning -->
     <Button
+        android:id="@+id/alternative_confirmButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_gravity="right"
-        android:text="@string/bekräfta" />
+        android:layout_gravity="center"
+        android:text="@string/bekräfta"
+        android:onClick="nextScreen" />
 </LinearLayout>
