--- a/GameOfNature/res/layout/activity_question.xml
+++ b/GameOfNature/res/layout/activity_question.xml
@@ -8,26 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".QuestionActivity" >
 
-    <Button
-        android:id="@+id/question_btnAnswer4"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_below="@+id/button2"
-        android:text="@string/answer_4" 
-        android:onClick="tryAnswer"/>
-    	
-
-    <Button
-        android:id="@+id/question_btnAnswer3"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
-        android:layout_alignBaseline="@+id/button4"
-        android:layout_alignBottom="@+id/button4"
-        android:layout_alignLeft="@+id/button1"
-        android:text="@string/answer_3" 
-        android:onClick="tryAnswer"/>
-
     <TextView
         android:id="@+id/question_title"
         android:layout_width="wrap_content"
@@ -36,23 +16,7 @@
         android:layout_centerHorizontal="true"
         android:text="@string/question_topic" />
 
-    <Button
-        android:id="@+id/question_btnAnswer1"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
-        android:layout_above="@+id/button4"
-        android:layout_alignParentLeft="true"
-        android:text="@string/answer_1" 
-        android:onClick="tryAnswer"/>
-
-    <Button
-        android:id="@+id/question_btnAnswer2"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/button3"
-        android:text="@string/answer_2" 
-        android:onClick="tryAnswer"/>
+    
 
     <TextView
         android:id="@+id/question_content"
@@ -62,5 +26,41 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
         android:text="@string/question" />
+
+    <Button
+        android:id="@+id/question_btnAnswer1"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/question_btnAnswer2"
+        android:onClick="tryAnswer"
+        android:text="@string/answer_1" />
+    
+    <Button
+        android:id="@+id/question_btnAnswer2"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/button3"
+        android:text="@string/answer_2" 
+        android:onClick="tryAnswer"/>
+
+    <Button
+        android:id="@+id/question_btnAnswer3"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_below="@+id/question_btnAnswer2"
+        android:layout_toLeftOf="@+id/question_btnAnswer1"
+        android:onClick="tryAnswer"
+        android:text="@string/answer_3" />
+
+    <Button
+        android:id="@+id/question_btnAnswer4"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_alignBottom="@+id/question_btnAnswer3"
+        android:layout_alignLeft="@+id/question_btnAnswer1"
+        android:onClick="tryAnswer"
+        android:text="@string/answer_4" />
 
 </RelativeLayout>
