--- a/GameOfNature/res/layout/activity_alternativsida.xml
+++ b/GameOfNature/res/layout/activity_alternativsida.xml
@@ -5,8 +5,8 @@
     android:layout_gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="62dp"
+    android:paddingRight="62dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bakgrundalt"
     tools:context=".Alternativsida" >
