--- a/GameOfNature/res/layout/activity_statistics.xml
+++ b/GameOfNature/res/layout/activity_statistics.xml
@@ -3,11 +3,12 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+     android:background="@drawable/bakgrundalt"
     tools:context=".StatisticsActivity" >
     
     <Button
@@ -15,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="350dp"
         android:onClick="GameBoardScreen"
         android:text="@string/GameBoardScreen" />
     
