--- a/GameOfNature/res/menu/game_board.xml
+++ b/GameOfNature/res/menu/game_board.xml
@@ -5,5 +5,15 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+    
+      <item 
+          android:id="@+id/icon1"
+          android:icon="@drawable/marker_icon_a_blue"
+          android:title=""
+          android:showAsAction="ifRoom"/>
+      <item 
+          android:id="@+id/icon2"
+          android:icon="@drawable/marker_icon_a_green"
+          android:title=""
+          android:showAsAction="ifRoom"/>
 </menu>
