--- a/GameOfNature/res/layout/activity_alternativsida.xml
+++ b/GameOfNature/res/layout/activity_alternativsida.xml
@@ -163,8 +163,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_launcher" />
+        android:scaleType="centerInside" />
    </LinearLayout>
 	<!-- Button för Bekräftning -->
     <Button
