--- a/GameOfNature/res/layout/activity_alternativsida.xml
+++ b/GameOfNature/res/layout/activity_alternativsida.xml
@@ -5,8 +5,8 @@
     android:layout_gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="62dp"
-    android:paddingRight="62dp"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bakgrundalt"
     tools:context=".Alternativsida" >
@@ -163,7 +163,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:scaleType="centerInside" />
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_launcher" />
    </LinearLayout>
 	<!-- Button för Bekräftning -->
     <Button
