--- a/GameOfNature/res/layout/activity_question.xml
+++ b/GameOfNature/res/layout/activity_question.xml
@@ -31,8 +31,7 @@
         android:id="@+id/question_btnAnswer1"
         android:layout_width="145dp"
         android:layout_height="145dp"
-        android:layout_above="@+id/question_btnAnswer3"
-        android:layout_toRightOf="@+id/question_btnAnswer2"
+        android:layout_centerVertical="true"
         android:onClick="tryAnswer"
         android:text="@string/answer_1" />
     
@@ -41,7 +40,7 @@
         android:layout_width="145dp"
         android:layout_height="145dp"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/button3"
+        android:layout_toRightOf="@+id/question_btnAnswer1"
         android:text="@string/answer_2" 
         android:onClick="tryAnswer"/>
 
@@ -49,8 +48,7 @@
         android:id="@+id/question_btnAnswer3"
         android:layout_width="145dp"
         android:layout_height="145dp"
-        android:layout_below="@+id/question_btnAnswer2"
-        android:layout_toLeftOf="@+id/question_btnAnswer1"
+        android:layout_below="@+id/question_btnAnswer1"
         android:onClick="tryAnswer"
         android:text="@string/answer_3" />
 
@@ -58,9 +56,8 @@
         android:id="@+id/question_btnAnswer4"
         android:layout_width="145dp"
         android:layout_height="145dp"
-        android:layout_alignBottom="@+id/question_btnAnswer3"
-        android:layout_alignLeft="@+id/question_btnAnswer1"
-        android:layout_alignTop="@+id/question_btnAnswer3"
+        android:layout_below="@+id/question_btnAnswer2"
+        android:layout_toRightOf="@+id/question_btnAnswer3"
         android:onClick="tryAnswer"
         android:text="@string/answer_4" />
 
