Fixat så att poäng visas i actionBar. Fixat så att allt sparas till databas (status osv) Och laddas från databas.

--- a/GameOfNature/res/menu/game_board.xml
+++ b/GameOfNature/res/menu/game_board.xml
@@ -1,5 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+	<item
+        android:id="@+id/badge"
+        android:actionLayout="@layout/feed_update_count"
+        android:icon="@drawable/shape_notification"
+        android:showAsAction="always">
+	</item>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
