--- a/GameOfNature/res/values/styles.xml
+++ b/GameOfNature/res/values/styles.xml
@@ -23,7 +23,7 @@
                 <item name="android:textColor">#000000</item>
                 <item name="android:gravity">center</item>
                 <item name="android:layout_margin">3dp</item>
-                <item name="android:textSize">30dp</item>
+                <item name="android:textSize">15dp</item>
                 <item name="android:shadowColor">#000000</item>
                 <item name="android:shadowDx">1</item>
                 <item name="android:shadowDy">1</item>
@@ -39,6 +39,14 @@
                 <item name="android:shadowDx">2</item>
                 <item name="android:shadowDy">2</item>
                 <item name="android:shadowRadius">1</item>
+    </style>
+    <style name="questionTopic">
+                <item name="android:textColor">#000000</item>
+                <item name="android:textSize">30dp</item>
+    </style>
+    <style name="questionText">
+                <item name="android:textColor">#000000</item>
+                <item name="android:textSize">20dp</item>
     </style>
 
 </resources>
