--- a/GameOfNature/res/layout/activity_question.xml
+++ b/GameOfNature/res/layout/activity_question.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".QuestionActivity"
-    android:background="@drawable/otherbackground" >
+    android:background="@drawable/bakgrundenalt" >
    
 
     <TextView
