--- a/GameOfNature/res/layout/activity_winner.xml
+++ b/GameOfNature/res/layout/activity_winner.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/otherbackground"
+    android:background="@drawable/bakgrundenalt"
     tools:context=".WinnerActivity" >
     
             <TextView
