--- a/GameOfNature/res/layout/activity_alternativsida.xml
+++ b/GameOfNature/res/layout/activity_alternativsida.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/bakgrundenalt"
+    android:background="@drawable/background_clear"
     tools:context=".Alternativsida" >
 		<!-- Lagnamn -->
         <TextView
@@ -184,7 +184,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/bekräfta"
-        android:background="@drawable/upp"
+        android:background="@drawable/button_up"
         android:onClick="nextScreen" />
     </LinearLayout>
 </LinearLayout>
