--- a/GameOfNature/res/layout/activity_start.xml
+++ b/GameOfNature/res/layout/activity_start.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/bgrund"
+    android:background="@drawable/background_start"
     tools:context=".StartActivity" >
 
     <Button
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/upp"
+        android:background="@drawable/button_up"
         android:onClick="nextScreen"
         android:text="@string/start_button" />
 
@@ -29,7 +29,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:onClick="changeButton"
-        android:background="@drawable/upp"
+        android:background="@drawable/button_up"
         android:text="@string/continue_button" />
 
 
