--- a/GameOfNature/res/values/styles.xml
+++ b/GameOfNature/res/values/styles.xml
@@ -11,6 +11,14 @@
             backward-compatibility can go here.
         -->
     </style>
+    
+    <color name="black">#FF000000</color>
+	<color name="whitegrey">#FFF2F2F2</color>
+
+	<style name="dialog_light" parent="@android:style/Theme.Dialog">
+   		 <item name="@android:windowBackground">@color/whitegrey</item>
+    	<item name="@android:textColor">@color/black</item>        
+	</style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
