--- a/GameOfNature/res/layout/activity_game_board.xml
+++ b/GameOfNature/res/layout/activity_game_board.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentTop="true" >
         
   	   <Button 
-          android:id="@+id/notif_count"
+          android:id="@+id/count"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:minWidth="32dp"
