--- a/GameOfNature/res/layout/activity_question.xml
+++ b/GameOfNature/res/layout/activity_question.xml
@@ -35,22 +35,16 @@
         android:id="@+id/question_btnAnswer1"
         android:layout_width="145dp"
         android:layout_height="145dp"
+        android:background="@drawable/blue_button"
         android:layout_centerVertical="true"
         android:onClick="tryAnswer"
         android:text="@string/answer_1" />
 
     <Button
-        android:id="@+id/question_btnAnswer3"
-        android:layout_width="145dp"
-        android:layout_height="145dp"
-        android:layout_below="@+id/question_btnAnswer1"
-        android:onClick="tryAnswer"
-        android:text="@string/answer_3" />
-
-    <Button
         android:id="@+id/question_btnAnswer4"
         android:layout_width="145dp"
         android:layout_height="145dp"
+        android:background="@drawable/blue_button"
         android:layout_alignBaseline="@+id/question_btnAnswer3"
         android:layout_alignBottom="@+id/question_btnAnswer3"
         android:layout_alignParentRight="true"
@@ -61,9 +55,21 @@
         android:id="@+id/question_btnAnswer2"
         android:layout_width="145dp"
         android:layout_height="145dp"
+        android:background="@drawable/blue_button"
         android:layout_above="@+id/question_btnAnswer3"
         android:layout_alignLeft="@+id/question_btnAnswer4"
         android:onClick="tryAnswer"
         android:text="@string/answer_2" />
+
+    <Button
+        android:id="@+id/question_btnAnswer3"
+        android:layout_width="145dp"
+        android:layout_height="145dp"
+        android:layout_alignLeft="@+id/question_btnAnswer1"
+        android:layout_below="@+id/question_btnAnswer1"
+        android:layout_marginTop="19dp"
+        android:background="@drawable/blue_button"
+        android:onClick="tryAnswer"
+        android:text="@string/answer_3" />
 
 </RelativeLayout>
