--- a/GameOfNature/res/layout/activity_winner.xml
+++ b/GameOfNature/res/layout/activity_winner.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,30 +11,57 @@
     android:background="@drawable/background_clear"
     tools:context=".WinnerActivity" >
     
-            <TextView
-                android:id="@+id/teamNameWin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
-                android:text="@string/team_name"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textStyle="bold" />
-            
+       		<TextView
+	            android:id="@+id/WinTitle"
+	            android:textStyle="bold"
+				style="@style/colourText"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="70dp"
+	            android:text="@string/winner_title"
+	            android:textAppearance="?android:attr/textAppearanceLarge" />
+		    <TextView	
+		        android:id="@+id/teamNameWinTitle"
+		        android:layout_width="wrap_content"
+       		    android:layout_height="wrap_content"
+       		    android:layout_marginTop="30dp"
+       		    android:text="@string/team_name"
+       		    style="@style/colourText"/>
+
+       		<TextView
+       		    android:id="@+id/teamNameWin"
+       		    android:layout_width="wrap_content"
+       		    android:layout_height="wrap_content"
+       		    android:text="@string/team_name"
+       		    android:textAppearance="?android:attr/textAppearanceLarge"
+       		    android:textStyle="bold" />
+
+	    	<TextView	
+		        android:id="@+id/TimeWinTitle"
+		        android:layout_width="wrap_content"
+       		    android:layout_height="wrap_content"
+       		    android:text="@string/game_time"
+       		    style="@style/colourText"/>
+
             <TextView
             android:id="@+id/TimeWin"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:text="@string/game_time"
             android:textAppearance="?android:attr/textAppearanceLarge" />
-
+	
+	    	<TextView	
+		        android:id="@+id/distanceWinTitle"
+		        android:layout_width="wrap_content"
+       		    android:layout_height="wrap_content"
+       		    android:text="@string/distance"
+       		    style="@style/colourText"/>
             <TextView
                 android:id="@+id/distanceWin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/game_time"
+                android:text="@string/distance"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textStyle="bold" />
     
