--- a/GameOfNature/res/layout/activity_game_board.xml
+++ b/GameOfNature/res/layout/activity_game_board.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".GameBoardActivity" >
 
     <fragment
@@ -11,8 +11,8 @@
         class="com.google.android.gms.maps.MapFragment" />
     
     <LinearLayout
-        android:id="@+id/LinearBarLayout"
-        android:layout_width="match_parent"
+        android:id="@+id/LinearBarLayoutTop"
+        android:layout_width="fill_parent"
         android:layout_height="40sp"
         android:orientation="horizontal"
         android:background="#162252"
@@ -30,6 +30,25 @@
           android:textColor="@android:color/white"
           android:gravity="center"
           android:padding="2dp"
-          android:singleLine="true"/>     
+          android:singleLine="true"/>
+  	   
+		<RelativeLayout
+		    android:id="@+id/RelativeBarLayout"
+		    android:layout_width="fill_parent"
+		    android:layout_height="match_parent"
+		    android:orientation="horizontal" >
+		    
+		    <LinearLayout
+		        android:id="@+id/LinearBarLayout"
+		        android:layout_centerHorizontal="true"
+		        android:layout_width="wrap_content"
+		        android:layout_height="match_parent"
+		        android:orientation="horizontal">
+		        
+		        
+		    </LinearLayout>
+		    
+		    
+		</RelativeLayout>
     </LinearLayout>   	
 </RelativeLayout> 
