--- a/GameOfNature/res/drawable-hdpi/blue_button.xml
+++ b/GameOfNature/res/drawable-hdpi/blue_button.xml
@@ -3,12 +3,12 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#449def" />
-            <stroke
-                android:width="1dp"
                 android:color="#2f6699" />
+            <stroke
+                android:width="3dp"
+                android:color="#9C9C9C" />
             <corners
-                android:radius="3dp" />
+                android:radius="20dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
@@ -19,14 +19,14 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#449def"
+                android:startColor="#000000"
                 android:endColor="#2f6699"
                 android:angle="270" />
             <stroke
-                android:width="1dp"
-                android:color="#2f6699" />
+                android:width="3dp"
+                android:color="#9C9C9C" />
             <corners
-                android:radius="4dp" />
+                android:radius="20dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
