--- a/GameOfNature/res/drawable-hdpi/red_button.xml
+++ b/GameOfNature/res/drawable-hdpi/red_button.xml
@@ -5,10 +5,10 @@
             <solid
                 android:color="#ef4444" />
             <stroke
-                android:width="1dp"
-                android:color="#992f2f" />
+                android:width="3dp"
+                android:color="#9C9C9C" />
             <corners
-                android:radius="3dp" />
+                android:radius="20dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
@@ -23,10 +23,10 @@
                 android:endColor="#992f2f"
                 android:angle="270" />
             <stroke
-                android:width="1dp"
-                android:color="#992f2f" />
+                android:width="3dp"
+                android:color="#9C9C9C" />
             <corners
-                android:radius="3dp" />
+                android:radius="20dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
