--- a/GameOfNature/res/drawable-hdpi/yellow_button.xml
+++ b/GameOfNature/res/drawable-hdpi/yellow_button.xml
@@ -5,10 +5,10 @@
             <solid
                 android:color="#f3ae1b" />
             <stroke
-                android:width="1dp"
-                android:color="#bb6008" />
+                android:width="3dp"
+                android:color="#9C9C9C" />
             <corners
-                android:radius="3dp" />
+                android:radius="20dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
@@ -23,10 +23,10 @@
                 android:endColor="#bb6008"
                 android:angle="270" />
             <stroke
-                android:width="1dp"
-                android:color="#bb6008" />
+                android:width="3dp"
+                android:color="#9C9C9C" />
             <corners
-                android:radius="4dp" />
+                android:radius="20dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
