--- a/GameOfNature/res/layout/activity_task_dialog.xml
+++ b/GameOfNature/res/layout/activity_task_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
-android:background="#000"
+android:background="@drawable/dialog"
 android:orientation="vertical" >
 
 <TextView
@@ -13,7 +13,8 @@ android:orientation="vertical" >
     android:layout_margin="10dp"
     android:gravity="center_horizontal"
     android:text="Uppgiftspunkt"
-    android:textColor="#fff"
+    android:textStyle="bold" 
+    android:textColor="#000"
     android:textSize="16dp" >
 </TextView>
 <TextView
@@ -23,7 +24,7 @@ android:orientation="vertical" >
     android:layout_gravity="center_horizontal"
     android:layout_margin="10dp"
     android:gravity="center_horizontal"
-    android:textColor="#fff"
+    android:textColor="#000"
     android:textSize="16dp" >
 </TextView>
 <LinearLayout  android:layout_width="fill_parent"
@@ -37,6 +38,7 @@ android:orientation="vertical" >
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:text="Ok"
+    android:background="@drawable/button_up"
     android:textColor="#000"
     android:textSize="18sp"
     android:textStyle="bold" 
@@ -50,6 +52,7 @@ android:orientation="vertical" >
     android:layout_marginTop="10dp"
     android:text="Cancel"
     android:textColor="#000"
+    android:background="@drawable/button_up"
     android:textSize="18sp"
     android:textStyle="bold"
     android:onClick="cancelClicked">
